# clients

./: eslint.config.mjs  package-lock.json  package.json
apps/browser/src/_locales/en/: messages.json
apps/desktop/: package.json
apps/desktop/desktop_native/: Cargo.toml
apps/desktop/desktop_native/importer/: Cargo.toml
apps/desktop/desktop_native/importer/src/: chromium.rs  crypto.rs  lib.rs  linux.rs  macos.rs  util.rs  windows.rs
apps/desktop/desktop_native/napi/: Cargo.toml  index.d.ts
apps/desktop/desktop_native/napi/src/: lib.rs
apps/desktop/scripts/: start.js
apps/desktop/src/: main.ts
apps/desktop/src/app/: app.component.ts
apps/desktop/src/importers/chromium/: index.ts
apps/desktop/src/locales/en/: messages.json
apps/desktop/src/main/menu/: menu.file.ts
apps/desktop/src/platform/: preload.ts
apps/desktop/src/platform/services/: chromium-import.service.ts
apps/web/src/locales/en/: messages.json
bitwarden_license/bit-web/src/app/dirt/organization-integrations/: integrations.component.ts
libs/importer/src/components/: import.component.html  import.component.ts
libs/importer/src/components/keeper/: import-keeper.component.html  import-keeper.component.ts  index.ts  keeper-direct-import-ui.service.ts  keeper-direct-import.service.ts
libs/importer/src/components/keeper/dialog/: index.ts  keeper-approval-method-select.component.html  keeper-approval-method-select.component.ts  keeper-device-approval-prompt.component.html  (+5 more)
libs/importer/src/services/: import.service.ts
scripts/: bitwarden-import-from-keeper.sh
(+11 files in other folders)
